--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background: #fff9f8;
+  font-family: Arial, Helvetica, sans-serif;
+}
