--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ body {
   background: #fff9f8;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+*, *::after, *::before {
+  box-sizing: border-box;
+}
