--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
