--- a/src/components/Navbar/Sidebar/index.css
+++ b/src/components/Navbar/Sidebar/index.css
@@ -1,6 +1,6 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: fixed;
+  position: absolute;
   width: 30px;
   height: 24px;
   right: 36px;
@@ -39,7 +39,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #f0f1f9;
+  background: white;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
   position: relative;
